# bitvec

./: .cirrus.yaml  .cirrus.yml  .drone.yml  .gitignore  .travis.yml  .travis.yml.patch  LICENSE  README.md  TODO  bitvec.cabal  cabal.haskell-ci  cabal.project  cabal.project.wasi  changelog.md  stack-8.10.2.yaml
.github/workflows/: ci.yaml  ci.yml
bench/: Bench.hs
bench/Bench/: BitIndex.hs  Common.hs  GCD.hs  Intersection.hs  Invert.hs  Product.hs  RandomFlip.hs  RandomRead.hs  RandomWrite.hs  Remainder.hs  Reverse.hs  Sum.hs  Union.hs
cbits/: bitvec_simd.c
src/Data/: Bit.hs
src/Data/Bit/: F2Poly.hs  F2PolyTS.hs  Gmp.hs  Immutable.hs  ImmutableTS.hs  Internal.hs  InternalTS.hs  Mutable.hs  MutableTS.hs  Pdep.hs  PdepPext.hs  SIMD.hs  Select1.hs  ThreadSafe.hs  Utils.hs
src/Data/Vector/Unboxed/: Bit.hs
src/Data/Vector/Unboxed/Bit/: Instance.hs  Internal.hs
src/Data/Vector/Unboxed/Mutable/: Bit.hs
test/: Main.hs  Support.hs
test/Tests/: Bit.hs  Conc.hs  F2Poly.hs  MVector.hs  MVectorTS.hs  SetOps.hs  SetOpsTS.hs  Vector.hs
tests/: bitvec-tests.cabal
tests/src/: Main.hs  Properties.hs  Support.hs
tests/src/Tests/: Bit.hs  MVector.hs  SetOps.hs  Vector.hs
