name:                   bitvec-tests
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

Executable bitvec-tests
  hs-source-dirs:       src
  ghc-options:          -threaded -fwarn-unused-imports -fwarn-unused-binds
  main-is:              Main.hs
  build-depends:        base >= 3,
                        bitvec,
                        HUnit,
                        vector,
                        test-framework,
                        test-framework-hunit,
                        test-framework-quickcheck2,
                        QuickCheck
                        
